@@ -659,7 +659,7 @@ public class PinotHelixResourceManager {
     if (InstanceTypeUtils.isBroker(instanceId) && updateBrokerResource) {
       newBrokerTags =
           newTags != null ? newTags.stream().filter(TagNameUtils::isBrokerTag).sorted().collect(Collectors.toList())
-              : Collections.emptyList();
+              : List.of();
       List<String> oldBrokerTags =
           oldTags.stream().filter(TagNameUtils::isBrokerTag).sorted().collect(Collectors.toList());
       shouldUpdateBrokerResource = !newBrokerTags.equals(oldBrokerTags);
@@ -692,7 +692,7 @@ public class PinotHelixResourceManager {
     Preconditions.checkArgument(InstanceTypeUtils.isServer(serverInstanceName),
         "setQueriesDisabled only applies to server instances, got: %s", serverInstanceName);
     Map<String, String> propToUpdate =
-        Collections.singletonMap(CommonConstants.Helix.QUERIES_DISABLED, Boolean.toString(disabled));
+        Map.of(CommonConstants.Helix.QUERIES_DISABLED, Boolean.toString(disabled));
     HelixConfigScope scope =
         new HelixConfigScopeBuilder(HelixConfigScope.ConfigScopeProperty.PARTICIPANT, _helixClusterName)
             .forParticipant(serverInstanceName).build();
@@ -1285,7 +1285,7 @@ public class PinotHelixResourceManager {
    * @return Request response
    */
   public synchronized PinotResourceManagerResponse deleteSegment(String tableNameWithType, String segmentName) {
-    return deleteSegments(tableNameWithType, Collections.singletonList(segmentName));
+    return deleteSegments(tableNameWithType, List.of(segmentName));
   }
 
   public PinotResourceManagerResponse updateBrokerTenant(Tenant tenant) {
@@ -1534,6 +1534,9 @@ public class PinotHelixResourceManager {
     Set<String> taggedInstances = new HashSet<>(HelixHelper.getInstancesWithTag(_helixZkManager, brokerTag));
     String brokerName = Helix.BROKER_RESOURCE_INSTANCE;
     IdealState brokerIdealState = _helixAdmin.getResourceIdealState(_helixClusterName, brokerName);
+    if (brokerIdealState == null) {
+      return true;
+    }
     for (String partition : brokerIdealState.getPartitionSet()) {
       for (String instance : brokerIdealState.getInstanceSet(partition)) {
         if (taggedInstances.contains(instance)) {
@@ -1554,6 +1557,9 @@ public class PinotHelixResourceManager {
         continue;
       }
       IdealState tableIdealState = _helixAdmin.getResourceIdealState(_helixClusterName, resourceName);
+      if (tableIdealState == null) {
+        continue;
+      }
       for (String partition : tableIdealState.getPartitionSet()) {
         for (String instance : tableIdealState.getInstanceSet(partition)) {
           if (taggedInstances.contains(instance)) {
@@ -1967,7 +1973,7 @@ public class PinotHelixResourceManager {
       return schemas.stream().filter(schemaName -> DatabaseUtils.isPartOfDatabase(schemaName, databaseName))
           .collect(Collectors.toList());
     }
-    return Collections.emptyList();
+    return List.of();
   }
 
   public void initUserACLConfig(ControllerConf controllerConf)
@@ -2044,7 +2050,7 @@ public class PinotHelixResourceManager {
    */
   public void addTable(TableConfig tableConfig)
       throws IOException {
-    addTable(tableConfig, Collections.emptyList());
+    addTable(tableConfig, List.of());
   }
 
   /**
@@ -2698,7 +2704,7 @@ public class PinotHelixResourceManager {
     MaterializedViewConsistencyManager mvMgr = _materializedViewConsistencyManager;
     if (mvMgr != null) {
       String rawTableName = TableNameBuilder.extractRawTableName(tableNameWithType);
-      List<String> dependentMVs = mvMgr.getDependentMaterializedViews(rawTableName);
+      List<String> dependentMVs = new ArrayList<>(mvMgr.getDependentMaterializedViews(rawTableName));
       // Don't block when the table being dropped IS an MV (self-reference impossible, but the
       // index entry exists for MVs over MVs — currently unsupported, but the guard is cheap).
       dependentMVs.remove(tableNameWithType);
@@ -2830,7 +2836,7 @@ public class PinotHelixResourceManager {
         // Reset segments in ERROR state
         boolean resetSuccessful = false;
         try {
-          _helixAdmin.resetResource(_helixClusterName, Collections.singletonList(tableNameWithType));
+          _helixAdmin.resetResource(_helixClusterName, List.of(tableNameWithType));
           resetSuccessful = true;
         } catch (HelixException e) {
           LOGGER.warn("Caught exception while resetting resource: {}", tableNameWithType, e);
@@ -2865,7 +2871,7 @@ public class PinotHelixResourceManager {
     List<String> logicalTableNames = _propertyStore.getChildNames(
         PinotHelixPropertyStoreZnRecordProvider.forLogicalTable(_propertyStore).getRelativePath(),
         AccessOption.PERSISTENT);
-    return logicalTableNames != null ? logicalTableNames : Collections.emptyList();
+    return logicalTableNames != null ? logicalTableNames : List.of();
   }
 
   /**
@@ -3410,7 +3416,7 @@ public class PinotHelixResourceManager {
             instance);
       } else {
         LOGGER.info("Resetting segment: {} of table: {} on instance: {}", segmentName, tableNameWithType, instance);
-        resetPartitionAllState(instance, tableNameWithType, Collections.singleton(segmentName), failedInstances);
+        resetPartitionAllState(instance, tableNameWithType, Set.of(segmentName), failedInstances);
       }
     }
 
@@ -3490,7 +3496,7 @@ public class PinotHelixResourceManager {
     Preconditions.checkState(CollectionUtils.isNotEmpty(instanceSet), "Could not find segment: %s in ideal state",
         segmentName);
     if (targetInstance != null) {
-      return instanceSet.contains(targetInstance) ? Collections.singleton(targetInstance) : Collections.emptySet();
+      return instanceSet.contains(targetInstance) ? Set.of(targetInstance) : Set.of();
     } else {
       return instanceSet;
     }
@@ -4201,7 +4207,7 @@ public class PinotHelixResourceManager {
     }
 
     // Replace all tags with minion_drained to prevent any task assignments
-    List<String> updatedTags = Collections.singletonList(Helix.DRAINED_MINION_INSTANCE);
+    List<String> updatedTags = List.of(Helix.DRAINED_MINION_INSTANCE);
     instanceConfig.getRecord().setListField(
         InstanceConfig.InstanceConfigProperty.TAG_LIST.name(), updatedTags);
 
@@ -5143,7 +5149,7 @@ public class PinotHelixResourceManager {
     ExternalView externalView = getTableExternalView(tableNameWithType);
     if (externalView == null) {
       LOGGER.warn("External view is null for table ({})", tableNameWithType);
-      return Collections.emptySet();
+      return Set.of();
     }
     Map<String, Map<String, String>> segmentAssignment = externalView.getRecord().getMapFields();
     Set<String> onlineSegments = new HashSet<>(HashUtil.getHashMapCapacity(segmentAssignment.size()));
@@ -5742,7 +5748,7 @@ public class PinotHelixResourceManager {
     }
     try {
       String sourceTable = MaterializedViewAnalyzer.extractSourceTableName(definedSql);
-      return Collections.singletonList(sourceTable);
+      return List.of(sourceTable);
     } catch (Exception e) {
       LOGGER.warn("MV reverse-index backfill: failed to extract source table from definedSQL "
           + "for MV table {}; skipping", tableNameWithType, e);
@@ -5781,7 +5787,7 @@ public class PinotHelixResourceManager {
         return;
       }
       String sourceTable = MaterializedViewAnalyzer.extractSourceTableName(definedSQL);
-      mgr.onMaterializedViewTableCreated(tableConfig.getTableName(), Collections.singletonList(sourceTable));
+      mgr.onMaterializedViewTableCreated(tableConfig.getTableName(), List.of(sourceTable));
     } catch (Exception e) {
       LOGGER.warn("Failed to register MV table {} with consistency manager", tableConfig.getTableName(), e);
     }
@@ -5815,7 +5821,7 @@ public class PinotHelixResourceManager {
         if (definedSqlForDrop != null && !definedSqlForDrop.isEmpty()) {
           try {
             String src = MaterializedViewAnalyzer.extractSourceTableName(definedSqlForDrop);
-            mgr.onMaterializedViewTableDropped(tableNameWithType, Collections.singletonList(src));
+            mgr.onMaterializedViewTableDropped(tableNameWithType, List.of(src));
             LOGGER.info("MV table {} dropped via definedSQL fallback (definition znode absent)",
                 tableNameWithType);
             return;
