@@ -19,7 +19,6 @@
 package org.apache.pinot.controller.tuner;
 
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
@@ -63,7 +62,7 @@ public class RealTimeAutoIndexTunerTest {
         .setTableName("test").setTunerConfigList(Arrays.asList(_tunerConfig)).build();
     TableConfigTunerRegistry.init(Arrays.asList(DEFAULT_TABLE_CONFIG_TUNER_PACKAGES));
     TableConfigTuner tuner = TableConfigTunerRegistry.getTuner(TUNER_NAME);
-    TableConfig result = tuner.apply(null, tableConfig, _schema, Collections.emptyMap());
+    TableConfig result = tuner.apply(null, tableConfig, _schema, Map.of());
 
     IndexingConfig newConfig = result.getIndexingConfig();
     List<String> invertedIndexColumns = newConfig.getInvertedIndexColumns();
