@@ -22,7 +22,6 @@ import java.io.File;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import org.apache.commons.io.FileUtils;
 import org.apache.pinot.core.segment.processing.timehandler.TimeHandler;
@@ -66,7 +65,7 @@ public class SegmentProcessorFrameworkTest extends BaseSegmentProcessorFramework
       recordReaderConfigs.add(new RecordReaderFileConfig(reader));
     }
     SegmentProcessorFramework framework =
-        new SegmentProcessorFramework(config, workingDir, recordReaderConfigs, Collections.emptyList(), null);
+        new SegmentProcessorFramework(config, workingDir, recordReaderConfigs, List.of(), null);
     return framework.process();
   }
 
@@ -99,7 +98,7 @@ public class SegmentProcessorFrameworkTest extends BaseSegmentProcessorFramework
     SegmentProcessorConfig config =
         new SegmentProcessorConfig.Builder().setTableConfig(tableConfig).setSchema(schema).build();
     SegmentProcessorFramework framework = new SegmentProcessorFramework(config, workingDir,
-        List.of(recordReaderFileConfig), Collections.emptyList(), null);
+        List.of(recordReaderFileConfig), List.of(), null);
     List<File> outputSegments = framework.process();
     assertEquals(outputSegments.size(), 1);
     ImmutableSegment segment = ImmutableSegmentLoader.load(outputSegments.get(0), ReadMode.mmap);
@@ -230,7 +229,7 @@ public class SegmentProcessorFrameworkTest extends BaseSegmentProcessorFramework
 
     SegmentProcessorFramework frameworkWithRecordReaderFileConfig =
         new SegmentProcessorFramework(config, workingDir, List.of(recordReaderFileConfig),
-            Collections.emptyList(), null);
+            List.of(), null);
     outputSegments = frameworkWithRecordReaderFileConfig.process();
 
     // Verify the number of segments created and the total docs.
@@ -253,7 +252,7 @@ public class SegmentProcessorFrameworkTest extends BaseSegmentProcessorFramework
     recordReaderFileConfig = new RecordReaderFileConfig(recordReader);
     SegmentProcessorFramework frameworkWithDelegateRecordReader =
         new SegmentProcessorFramework(config, workingDir, List.of(recordReaderFileConfig),
-            Collections.emptyList(), null);
+            List.of(), null);
     outputSegments = frameworkWithDelegateRecordReader.process();
 
     // Verify the number of segments created and the total docs.
@@ -279,7 +278,7 @@ public class SegmentProcessorFrameworkTest extends BaseSegmentProcessorFramework
 
     frameworkWithRecordReaderFileConfig =
         new SegmentProcessorFramework(config, workingDir, List.of(recordReaderFileConfig),
-            Collections.emptyList(), null);
+            List.of(), null);
     outputSegments = frameworkWithRecordReaderFileConfig.process();
 
     // Verify that each segment has only one row.
@@ -302,7 +301,7 @@ public class SegmentProcessorFrameworkTest extends BaseSegmentProcessorFramework
     recordReaderFileConfig = new RecordReaderFileConfig(recordReader);
     frameworkWithDelegateRecordReader =
         new SegmentProcessorFramework(config, workingDir, List.of(recordReaderFileConfig),
-            Collections.emptyList(), null);
+            List.of(), null);
     outputSegments = frameworkWithDelegateRecordReader.process();
 
     // Verify that each segment has only one row.
