@@ -22,7 +22,6 @@ import com.fasterxml.jackson.databind.JsonNode;
 import java.io.File;
 import java.io.IOException;
 import java.util.ArrayList;
-import java.util.Collections;
 import java.util.List;
 import java.util.concurrent.TimeUnit;
 import org.apache.commons.io.FileUtils;
@@ -97,9 +96,9 @@ public class BenchmarkQueriesMSQE extends BaseClusterIntegrationTest {
       .setSortedColumn(SORTED_COL_NAME)
       .setRangeIndexColumns(List.of(INT_COL_NAME, LOW_CARDINALITY_STRING_COL))
       .setStarTreeIndexConfigs(
-          Collections.singletonList(
+          List.of(
               new StarTreeIndexConfig(List.of(SORTED_COL_NAME, INT_COL_NAME), null,
-                  Collections.singletonList(
+                  List.of(
                       new AggregationFunctionColumnPair(AggregationFunctionType.SUM, RAW_INT_COL_NAME).toColumnName()),
                   null, Integer.MAX_VALUE))).build();
 
