@@ -18,7 +18,6 @@
  */
 package org.apache.pinot.calcite.rel.rules;
 
-import java.util.Collections;
 import java.util.List;
 import org.apache.calcite.plan.RelOptCluster;
 import org.apache.calcite.plan.RelOptRuleCall;
@@ -98,7 +97,7 @@ public class PinotWindowExchangeNodeInsertRuleTest {
     Mockito.when(upperBoundInputRef.getIndex()).thenReturn(4);
     Mockito.when(upperBoundInputRef.getType()).thenReturn(intType);
 
-    List<Window.Group> groups = Collections.singletonList(
+    List<Window.Group> groups = List.of(
         new Window.Group(ImmutableBitSet.of(List.of(1)), true, RexWindowBounds.preceding(lowerBoundInputRef),
             RexWindowBounds.following(upperBoundInputRef), RexWindowExclusion.EXCLUDE_NO_OTHER, RelCollations.of(2),
             List.of(
